--- a/index.html
+++ b/index.html
@@ -30,21 +30,78 @@
                         </ul>
                     </nav>
                </div>
-                <div class="header__inner__end">
-                    <div class="header__inner__end__languages">
-                        <img class="header__inner__end__languages__flag" src="./images/RU.flag.png" alt="ru flag" >
-                        <p class="header__inner__end__languages__country">RU</p>
-                        <svg class="header__inner__end__languages__icon" width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M10.59 0.590332L6 5.17033L1.41 0.590332L0 2.00033L6 8.00033L12 2.00033L10.59 0.590332Z" fill="#5B6871"/>
-                        </svg>
+               
+                <div class="header__inner__end__div">
+                    <div class="header__inner__end">
+                        <div class="header__inner__end__languages" >
+                            <img class="header__inner__end__languages__flag" src="./images/RU.flag.png" alt="ru flag" >
+                            <p class="header__inner__end__languages__country">Рус</p>
+                            <svg class="header__inner__end__languages__icon" width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M10.59 0.590332L6 5.17033L1.41 0.590332L0 2.00033L6 8.00033L12 2.00033L10.59 0.590332Z" fill="#5B6871"/>
+                            </svg>
+                        </div>
+                        <ul class="header__show-list">
+                            <li class="header__show-item">
+                                <img class="header__show__img" src="./images/RU.flag.png" alt="RU flag" >
+                                <p class="header__show-country">Рус</p>
+                                <svg class="header__show-icon" width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M6.00003 11.1707L1.83003 7.00067L0.410034 8.41067L6.00003 14.0007L18 2.00067L16.59 0.590668L6.00003 11.1707Z" fill="#0D9676"/>
+                                 </svg>
+                            </li>
+                            <li class="header__show-item">
+                                <img class="header__show__img" src="./images/UZ.flag.png" alt="UZ flag" >
+                                <p class="header__show-country">UZ</p>
+                                <svg class="header__show-icon" width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M6.00003 11.1707L1.83003 7.00067L0.410034 8.41067L6.00003 14.0007L18 2.00067L16.59 0.590668L6.00003 11.1707Z" fill="#0D9676"/>
+                                    </svg>
+                            </li>
+                            <li class="header__show-item">
+                                <img class="header__show__img" src="./images/US.flag.png" alt="ENG flag" >
+                                <p class="header__show-country">ENG</p>
+                                <svg class="header__show-icon" width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M6.00003 11.1707L1.83003 7.00067L0.410034 8.41067L6.00003 14.0007L18 2.00067L16.59 0.590668L6.00003 11.1707Z" fill="#0D9676"/>
+                                 </svg>
+                            </li>
+                       </ul>
                     </div>
-                    <button class="btn header__inner__end__btn">Oбратный звонок</button>
+                    <button class="btn header__inner__end__btn" type="button">Oбратный звонок</button>
+                    <img class="hamburger-menu" src="./images/hamburger-btn.gif" alt="hamburger menu">
                 </div>
             </div>
         </div>
     </header>
     <!-- SITE HEADER END -->
 
+
+
+    <!--------------------------------- SITE MAIN START ------------------->
+    <main class="site-main">
+
+        <!-- HERO START -->
+            <div class="main__hero">
+                <div class="container">
+                    <div class="main__hero__inner">
+                        <div class="main__hero__inner__start">
+                            <h1 class="main__hero__inner__start-title">
+                                Компания IZGU
+                            </h1>
+                            <p class="main__hero__inner__start-desc">
+                                Является одним из лидеров среди производителей 
+                                пластмассовых горшков для цветов не только в Узбекистане,
+                                но и в странах СНГ. В широком ассортименте представлены горшки для 
+                                дома и сада IZGU стремится к постоянному развитию, современности и
+                                гибкости.
+                            </p>
+                        </div>
+                        <img class="main__hero__inner-img" src="./images/hero.img.png" alt="image" width="431" height="280" >
+                    </div>
+                </div>
+            </div>
+         <!-- HERO END -->
+
+    </main>
+
+    <!---------------------------------- SITE MAIN END ------------------------->
 
 
 
