add js to header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="header__inner">
                 <div class="header__inner__start">
                     <a class="header__inner__link" href="">
-                        <img class="header__inner__link__logo" src="./images/logo.png" alt="image" width="74"
+                        <img class="header__inner__link__logo" src="./images/icons/white-logo.svg" alt="image" width="74"
                             height="32">
                     </a>
                     <nav class="header__inner__nav">
@@ -81,7 +81,7 @@
                         </ul>
                     </div>
                     <button class="btn header__inner__end__btn" type="button">Oбратный звонок</button>
-                    <img class="hamburger-menu" src="./images/hamburger-btn.gif" alt="hamburger menu">
+                    <img class="burger-menu" src="./images/bar.png" alt="hamburger menu">
                 </div>
             </div>
         </div>
@@ -117,8 +117,8 @@
 
         <!-- ABOUT SECTION START -->
         <section class="about">
+            
             <div class="container">
-               
                 <div class="swiper mySwiper">
                     <h2 class="about__title">
                         Почему мы?
@@ -181,16 +181,16 @@
                     © 2022 IZGU. Все права защишены
                 </a>
                 <div class="footer__inner__end">
-                    <p class="footer__inner__end-tel">
+                    <a class="footer__inner__end-tel" href="+998991234567">
                         +998 99 123-45-67
-                    </p>
-                    <span class="footer__inner__end_instagramm">
+                    </a>
+                    <a class="footer__inner__end_instagramm" href="#">
                         <img class="footer__inner__end_instagramm-icon" src="./images/icons/instagramm.svg"
                             alt="instagramm icon">
-                    </span>
-                    <span class="footer__inner__end_yutb">
+                    </a>
+                    <a class="footer__inner__end_yutb" href="#">
                         <img class="footer__inner__end_yutb-icon" src="./images/icons/yutb.svg" alt="yutb icon">
-                    </span>
+                    </a>
                 </div>
             </div>
         </div>
